--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "create-next-tail-dashboard",
   "description": "An admin dashboard built on nextjs with tailwindcss.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
-  "bin":{
-    "create-next-tail-dashboard":"index.js"
+  "bin": {
+    "create-next-tail-dashboard": "index.js"
   },
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": ["tailwind","nextjs","runner"],
+  "keywords": [
+    "tailwind",
+    "nextjs",
+    "runner"
+  ],
   "author": {
     "name": "Afreet Co"
   },
